<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_protocols"
        android:icon="@drawable/ic_nav_charts"
        android:orderInCategory="1"
        android:title= "@string/title_charts" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_nav_map"
        android:orderInCategory="2"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_nav_home"
        android:orderInCategory="3"
        android:title="@string/title_main" />

    <item
        android:id="@+id/navigation_bluetooth"
        android:icon="@drawable/ic_nav_bluetooth"
        android:orderInCategory="4"
        android:title="@string/title_connection" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_nav_settings"
        android:orderInCategory="5"
        android:title="@string/title_settings" />

</menu>