<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/box_rounded_framed"
    android:backgroundTint="@color/background_over">

    <TextView
        android:id="@+id/dialog_search_protocols_title"
        style="@style/header_text_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/dialog_search_protocols_title"
        app:layout_constraintBottom_toTopOf="@id/dialog_search_protocols_date_from_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_search_protocols_date_from_title"
        style="@style/input_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:layout_marginEnd="4dp"
        android:hint="@string/dialog_search_protocols_date_from_hint"
        app:helperText="@string/dialog_search_protocols_date_from_helper"
        app:layout_constraintBottom_toTopOf="@id/dialog_search_protocols_iksem_number_title"
        app:layout_constraintEnd_toStartOf="@id/dialog_search_protocols_date_till_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_search_protocols_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_search_protocols_date_from"
            style="@style/input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_search_protocols_date_till_title"
        style="@style/input_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:hint="@string/dialog_protocols_search_date_till_hint"
        app:helperText="@string/dialog_protocols_search_date_till_helper"
        app:layout_constraintBottom_toBottomOf="@id/dialog_search_protocols_date_from_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialog_search_protocols_date_from_title"
        app:layout_constraintTop_toTopOf="@id/dialog_search_protocols_date_from_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_search_protocols_date_till"
            style="@style/input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_search_protocols_iksem_number_title"
        style="@style/input_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:layout_marginEnd="4dp"
        android:hint="@string/dialog_search_protocols_iksem_number_hint"
        app:helperText="@string/dialog_search_protocols_iksem_number_helper"
        app:layout_constraintBottom_toTopOf="@id/dialog_search_protocols_apply"
        app:layout_constraintEnd_toStartOf="@id/dialog_search_protocols_operator_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_search_protocols_date_from_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_search_protocols_iksem_number"
            style="@style/input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_search_protocols_operator_title"
        style="@style/input_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:hint="@string/dialog_search_protocols_operator_hint"
        app:helperText="@string/dialog_search_protocols_operator_helper"
        app:layout_constraintBottom_toBottomOf="@id/dialog_search_protocols_iksem_number_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialog_search_protocols_iksem_number_title"
        app:layout_constraintTop_toTopOf="@id/dialog_search_protocols_iksem_number_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_search_protocols_operator"
            style="@style/input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_search_protocols_apply"
        style="@style/button_icon_green"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:contentDescription="@string/dialog_search_protocols_apply"
        app:icon="@drawable/ic_button_filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dialog_search_protocols_clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_search_protocols_iksem_number_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_search_protocols_clear"
        style="@style/button_icon_red"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/dialog_search_protocols_clear"
        app:icon="@drawable/ic_button_no_filter"
        app:layout_constraintBottom_toBottomOf="@id/dialog_search_protocols_apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialog_search_protocols_apply"
        app:layout_constraintTop_toTopOf="@id/dialog_search_protocols_apply" />

</androidx.constraintlayout.widget.ConstraintLayout>